--- a/app/views/cyclists/show.erb
+++ b/app/views/cyclists/show.erb
@@ -2,7 +2,7 @@
 <h4><%= @user.username %></h4><br><hr>
 
 <% @user.rides.each do |r| %>
-<a href="/rides/<%=r.id%>"><li><%= r.ride_distance%></li></a>
+<a href="/rides/<%=r.id%>"></a>
 
 
     <div class="container">
