--- a/app/views/rides/new.erb
+++ b/app/views/rides/new.erb
@@ -9,10 +9,10 @@
 <form action="/rides" method="POST">
 
 <label for="description">Description:</label>
-<textarea name="description" id="description" cols="30" rows="10"></textarea><br>
+<textarea name="description" id="description" cols="20" rows="10" required></textarea><br>
 
 <label for="ride_distance">Ride Distance (miles):</label>
-<input type="number" name="ride_distance" id="ride_distance" placeholder="How long is this ride? " required> <br>
+<input type="number" name="ride_distance" id="ride_distance" placeholder="How long was your ride? " required> <br>
 
 
 
