--- a/app/views/rides/index.erb
+++ b/app/views/rides/index.erb
@@ -1,9 +1,5 @@
-<h1>Cycling History </h1>
+<h3>cycling History</h3>
 
-<ul>
-  <% @rides.each do |r| %>
-  <%= erb :'rides/_ride', locals: {user: r.user, r: r} %>
+<% @rides.each do |ride| %>
+    <%= erb :'rides/_ride', locals: {user: ride.user, ride: ride} %>
 <% end %>
-
-
-<p><a href="/rides/new">record a new ride</a></p>
