--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,2 +1,2 @@
 <p><%= "Welcome, #{current_user.username}!"%></p>
-<p>To see who's riding today:<a href="/cyclists">click here</a></p>
+<p>To see who's riding today:<a href="/users">click here</a></p>
