--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
    <p>
       <a href="/home">Home</a>&nbsp;
       <a href="/rides">Rides</a>&nbsp;
-      <a href="/cyclists/<%=session[:user_id]%>">Achievements</a>&nbsp;
+      <a href="/users/<%=session[:user_id]%>">Achievements</a>&nbsp;
       <a href="/rides/new">Create New Ride</a>&nbsp;
       <a href="/logout">Logout</a>
    </p>
