--- a/app/views/rides/edit.erb
+++ b/app/views/rides/edit.erb
@@ -1,9 +1,14 @@
+<% if !!@error_message %>
+    <p class="danger"><%= @error_message %></p>
+<% end %>
 
-<form action="/rides/<%=@ride.id%>"  method="post">
+<form action="/rides/<%=@ride.id%>" method="post">
     <input type="hidden" name="_method" value="patch">
-    <label for="description">description:</label><br>
-    <textarea name="description" id="description" cols="30" rows="10"><%=@ride.description%></textarea><br>
-    <label for="ride_distance">ride_distance:</label>
-    <input type="text" name="ride_distance" id="ride_distance" value="<%=@ride.ride_distance%>"><br>
+    <label for="distance">Distance (miles):</label>
+    <input type="text" name="distance" id="distance" value="<%=@ride.distance%>"><br>
+    <label for="time">Durantion (minutes):</label>
+    <input type="text" name="time" id="time" value="<%=@ride.time%>"><br>
+    <label for="mood">Mood:</label><br>
+    <textarea name="mood" id="mood" cols="30" rows="10"><%=@ride.mood%></textarea><br>
     <input type="submit" value="Edit">
 </form>
