--- a/app/views/rides/ride.erb
+++ b/app/views/rides/ride.erb
@@ -1,6 +1,7 @@
 <div class="ride">
-    <h3><a href="/users/<%=user.id%>"><%= user.name %></a></h3>
-    <p>Distance: <%= run.distance %> miles</p>
-    <p>Durantion: <%= run.time %> minutes</p>
-    <p>Mood: <%= run.mood %></p>
+    <a href="/users/<%=user.id%>"><li><%= user.username %></li></a>
+    <p>Distance: <%= ride.distance %> miles</p>
+    <p>Durantion: <%= ride.time %> minutes</p>
+    <p>Mood: <%= ride.mood %></p>
 </div>
+  
