--- a/app/views/rides/ride.erb
+++ b/app/views/rides/ride.erb
@@ -1,7 +1,7 @@
 <div class="ride">
     <a href="/users/<%=user.id%>"><li><%= user.username %></li></a>
     <p>Distance: <%= ride.distance %> miles</p>
-    <p>Durantion: <%= ride.time %> minutes</p>
-    <p>Mood: <%= ride.mood %></p>
+    <p>Moving Time: <%= ride.time %> minutes</p>
+    <p>Add a Description: <%= ride.mood %></p>
 </div>
   
